--- a/views/form.html
+++ b/views/form.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 </head>
 <body>
+    <a href="../views/index.html">
+        <img style="height: 60px; position: absolute; left:40px;" src="../public/assets/right-arrow.png" alt="">
+    </a>
     <div id="container">
         <h2>Efectividad de Controles</h2>
     <form id="formulario" method="POST">
