--- a/views/view-form.html
+++ b/views/view-form.html
@@ -30,9 +30,11 @@
     </div>
 
     
+<div id="button-container">
+    <button class="button" id="generatePDFButton" >Generar PDF</button>
+    <button class="button" id="aceptarButton">Aceptar</button>
 
-    <button id="generatePDFButton">Generar PDF</button>
-    <button id="aceptarButton">Aceptar</button>
-
+</div>
+    
 </body>
 </html>
