Manual de usuario y sección de ayuda

--- a/views/form.html
+++ b/views/form.html
@@ -23,7 +23,7 @@
             <label for="nombre" class="input">
 
                 <input type="text" id="nombre" name="nombre" placeholder="" class="input__field">
-                <span class="input__label"><i class="zmdi zmdi-widgets"></i> Nombre del control</span>
+                <span class="input__label"><i class="zmdi zmdi-widgets"></i> Número del control</span>
             </label>
 
             <br>
