--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,16 @@
         la efectividad de los controles implementados en tu sistema o proceso para garantizar su seguridad y eficiencia.
     </p>
 
+    <!-- Icono de ayuda - descarga pdf -->
+    <div class="help">
+        <a href="./help.html">
+        <!-- <a href="../public/manual/ManualDeUsuario.pdf" download="Manual de usuario.pdf" target="_blank"> -->
+            <i style="font-size: 60px; color: rgb(69, 194, 216); position: absolute; top: 20px; right: 20px;" class="fa fa-question-circle" aria-hidden="true"></i>
+        </a>
+        <!-- <img src="../public/assets/question.png" alt=""> -->
+    </div>
+    
+
     <div id="second-container">
         <h6 style="position: absolute;">Selecciona un filtro:</h6>
         <div class="filters">
