--- a/views/view-form.html
+++ b/views/view-form.html
@@ -21,7 +21,7 @@
     <h2>Resultados del Formulario</h2>
 
     <div id="data-container">
-        <p><strong>Responsable del Control:</strong> <span id="nombre"></span></p>
+        <p><strong>Número del Control:</strong> <span id="nombre"></span></p>
         <p><strong>Responsable del Control:</strong> <span id="responsable"></span></p>
         <p><strong>Fecha de Implementación:</strong> <span id="fechaImplementacion"></span></p>
         <p><strong>Descripción del Control:</strong> <span id="descripcion"></span></p>
